<resources>
    <string name="app_name">Marj-Sec-1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="confirm_code">confirm code</string>
    <string name="enter_code_sent_to_email">Enter code sent to Email</string>
    <string name="back">Back</string>

    <!-- LOGIN SCREEN -->
    <string name="login_to_account">Login to account</string>
    <string name="forgot_password">forgot password?</string>
    <string name="login">Login</string>
    <string name="or_login_with">Or login with</string>
    <string name="dont_have_a_account">Don\'t have an account?</string>


    <!-- SIGN UP SCREEN -->
    <string name="create_your_account">Create your account</string>
    <string name="create_account">Create account</string>
    <string name="sign_up">Sign up</string>
    <string name="or_sign_up_with">Or sign up with</string>
    <string name="already_have_an_account">Already have an account?</string>

    <!-- FORGOT PASSWORD -->
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="recover_account">Recover account</string>
    <string name="fp_paragraph">
        Type in your email address and a link to update your password will be sent if theres an account registered  with the email received below.
    </string>

    <!-- UPDATE YOUR PASSWORD -->
    <string name="update_your_password">Update your password</string>
    <string name="update_password">Update password</string>

    <!-- VERIFY LOGIN DETAILS -->
    <string name="verify_login_details">Verify login details</string>

    <!-- VERIFY SIGN DETAILS -->
    <string name="verify_sign_up_details">Verify Sign-up details</string>

</resources>