<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/security_idea_1_marj_logo"
            android:contentDescription="@string/app_name"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:src="@drawable/security_idea_1_marj_wording"
            android:contentDescription="@string/app_name"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:elegantTextHeight="true"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:text="@string/login_to_account"
            android:fontFamily="@font/poppins_medium"/>

        <!-- INPUT PARENT -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- INPUT CHILD -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:background="@drawable/input_bg"
                android:elevation="2dp"
                android:fadingEdge="none"
                android:requiresFadingEdge="none">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:elegantTextHeight="true"
                    android:background="@android:color/transparent"
                    android:textColor="@color/black"
                    android:hint="@string/email"
                    android:textColorHint="@color/black"
                    android:textSize="14sp"/>

            </LinearLayout>

            <!-- INPUT CHILD -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:background="@drawable/input_bg"
                android:elevation="2dp"
                android:fadingEdge="none"
                android:requiresFadingEdge="none">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:elegantTextHeight="true"
                    android:background="@android:color/transparent"
                    android:textColor="@color/black"
                    android:hint="@string/password"
                    android:textColorHint="@color/black"
                    android:textSize="14sp"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:paddingEnd="8dp"
            android:paddingStart="0dp"
            android:gravity="center|end">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:elegantTextHeight="true"
                android:textSize="14sp"
                android:fontFamily="@font/poppins_medium"
                android:textColor="#777777"/>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/blue_button"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:requiresFadingEdge="none"
            android:stateListAnimator="@null"/>

    </LinearLayout>

</LinearLayout>