<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:paddingTop="25dp"
    android:paddingBottom="30dp"
    android:background="@color/white"
    android:orientation="vertical"
    android:clickable="true"
    android:focusable="true"
    tools:context=".Verify_login">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_max="350dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@drawable/security_idea_1_marj_logo" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/security_idea_1_marj_wording" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintWidth_max="450dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:elegantTextHeight="true"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/verify_login_details"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <!-- INPUT PARENT -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- INPUT CHILD -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/input_bg"
                    android:elevation="2dp"
                    android:fadingEdge="none"
                    android:paddingStart="16dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="10dp"
                    android:requiresFadingEdge="none">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:elegantTextHeight="true"
                        android:fontFamily="@font/poppins_medium"
                        android:autofillHints="phone"
                        android:hint="@string/enter_code_sent_to_email"
                        android:inputType="phone"
                        android:textColor="@color/black"
                        android:textColorHint="#A7A7A7"
                        android:textSize="14sp" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="12dp"
                android:elegantTextHeight="true"
                android:fontFamily="@font/poppins_medium"
                android:background="@drawable/blue_button"
                android:requiresFadingEdge="none"
                android:stateListAnimator="@null"
                android:text="@string/confirm_code"
                android:textAllCaps="false"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/redirect_to_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="6dp"
                android:elegantTextHeight="true"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/back"
                android:textColor="#B0B0B0" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>